# P4_BACKEND_BENCHMARKING

./: .gitmodules  README.md  build_client.sh  ethdev.io  init_dpdk.sh  kvs.cli  l2fwd.cli  l2fwd.spec  meson.build  pktgen_script.lua  run_client.sh  run_l2fwd.sh  run_l2fwd_macswap.sh  run_p4_kvs.sh  run_server.sh
clients/dpdk_client/: main.c  meson.build
p4kv/: client.py  kv.p4  kvs.p4  kvs.spec
